See scandipwa/scandipwa#1410
Added CR requested changes

--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,8 @@
     },
     "authors": [
         {
-            "name": "Alfreds Genkins",
-            "email": "alfreds@scandiweb.com"
-        },
-        {
-            "name": "Lauris Grosu",
-            "email": "lauris.grosu@scandiweb.com"
+            "name": "Zhan Lyaksa",
+            "email": "zans.laksa@scandiweb.com"
         }
     ],
     "license": [
