--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "type": "magento2-module",
     "require": {
-        "magento/product-community-edition": "^2.3.1"
+        "magento/magento2-base": "^2.3.1"
     },
     "support": {
         "source": "https://github.com/scandipwa/compare-graphql",
